--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-3.52MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 20.239.15.148, port: 21552, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 香港-5.44MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20721, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-4.41MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-892.4KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.07MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇺🇸 美国-4.49MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-303.8KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-657.8KB/s(Youtube:不良林), server: 172.104.244.36, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-3.98MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-306.2KB/s(Youtube:不良林), server: vs.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: vs.2046.gq, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.49MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-4.25MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 138.2.89.190, port: 443, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-332.6KB/s(Youtube:不良林), server: 20.239.15.148, port: 11406, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.62MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-4.42MB/s(Youtube:不良林), server: 103.173.155.72, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.20MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.44MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-892.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-303.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-657.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-306.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.44MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-892.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-303.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-657.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-306.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.44MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-892.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-303.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-657.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-306.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.44MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-892.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-303.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-657.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-306.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.44MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-892.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-303.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-657.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-306.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.44MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-892.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-303.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-657.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-306.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.44MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-892.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.21MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-303.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-657.8KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-306.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.42MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
