--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-657.8KB/s(Youtube:不良林), server: 172.104.244.36, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-3.98MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-306.2KB/s(Youtube:不良林), server: vs.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: vs.2046.gq, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.49MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-4.25MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 138.2.89.190, port: 443, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-332.6KB/s(Youtube:不良林), server: 20.239.15.148, port: 11406, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.62MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-4.42MB/s(Youtube:不良林), server: 103.173.155.72, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.20MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇳 中国-18.71MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-10.80MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.47MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-795.5KB/s(Youtube:不良林), server: 20.239.15.148, port: 21552, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-164.5KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.56MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-3.45MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-3.97MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-16.78MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇯🇵 日本-674.0KB/s(Youtube:不良林), server: 20.89.101.199, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-657.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.42MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-795.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-164.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-657.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.42MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-795.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-164.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-657.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.42MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-795.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-164.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-657.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.42MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-795.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-164.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-657.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.42MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-795.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-164.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-657.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.42MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-795.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-164.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-657.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.42MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-795.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-164.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
