--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-18.71MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-10.80MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.47MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-795.5KB/s(Youtube:不良林), server: 20.239.15.148, port: 21552, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-164.5KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-332.6KB/s(Youtube:不良林), server: 20.239.15.148, port: 11406, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.19MB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3509, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇩🇪 德国-1.86MB/s(Youtube:不良林), server: 172.104.251.52, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.33MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.93MB/s(Youtube:不良林), server: 172.104.244.36, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.56MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇨🇳 中国-3.45MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇨🇳 中国-3.97MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-18.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-795.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-164.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.93MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-18.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-795.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-164.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.93MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-18.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-795.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-164.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.93MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-18.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-795.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-164.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.93MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-18.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-795.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-164.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.93MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-18.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-795.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-164.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.93MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-18.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-795.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-164.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.93MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
