--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-332.6KB/s(Youtube:不良林), server: 20.239.15.148, port: 11406, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.19MB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3509, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇩🇪 德国-1.86MB/s(Youtube:不良林), server: 172.104.251.52, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.33MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.93MB/s(Youtube:不良林), server: 172.104.244.36, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.56MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-15.49MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-18.45MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇩🇪 德国-1.23MB/s(Youtube:不良林), server: 172.104.251.52, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.32MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-513.1KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-201.1KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-3.25MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇨🇳 中国-3.45MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-3.97MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-16.78MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-3.89MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇯🇵 日本-674.0KB/s(Youtube:不良林), server: 20.89.101.199, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.45MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.45MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,50 +52,51 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.45MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.45MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.45MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +104,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.45MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +129,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-332.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.33MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.45MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.89MB/s(Youtube:不良林)
       - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
